@@ -1,9 +1,0 @@
-hgnested is a Mercurial extension to work with nested repositories.
-
-It was inspired by the forest extension by Robin Farine.
-
-The extension allows to apply common Mercurial commands to all the nested
-repositories at once like pull, push etc. It also allows to fetch a complete
-tree of repositories through ssh or http.
-
-See hg help hgnested for the complete list of commands.
